structural-typing/tests/ui/select_invalid_prefix_plus.stderr
error: Invalid prefix '+' in select!. Did you mean modify!? select! only supports: field or ?field
  --> tests/ui/select_invalid_prefix_plus.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
10 |     type Invalid = user::select!(+name);
   |                    -------------------- in this macro invocation
   |
   = note: this error originates in the macro `user::select` (in Nightly builds, run with -Z macro-backtrace for more info)
